--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Welcome to nginx!</title>
 <style>
     body {
-        width: 35em;
+        width: auto;
         margin: auto auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
     }
